src/lib/codegen/components/snapshots/csx__lib__codegen__components__snapshot_indexer_icp__tests__snapshot_outputs-2.snap
---
source: src/lib/codegen/components/snapshot_indexer_icp.rs
expression: generated_codes.types.unwrap()
---
#![allow(dead_code, unused_imports)]
use candid::{self, CandidType, Deserialize, Principal, Encode, Decode};
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
pub struct ResponseType { value: String, timestamp: u64 }
