src/lib/codegen/components/snapshots/csx__lib__codegen__components__snapshot_indexer_icp__tests__snapshot_outputs_icp-2.snap
---
source: src/lib/codegen/components/snapshot_indexer_icp.rs
expression: "SrcString::from(&manifest.generate_user_impl_template().unwrap())"
---
pub type CallCanisterArgs =();
pub fn call_args() -> CallCanisterArgs {
() }
